--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+
+*{
+  box-sizing: border-box;
+  font-family :system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -18,16 +24,35 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    ) */
+/* background: #474a4f; */
+background: #313237;
+/* background: #2f3135; */
+    /* rgb(var(--background-start-rgb)); */
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+.TOWER_SIGNAL{
+  background-image: linear-gradient(to right, rgb(163, 221, 163) 0%, rgb(98, 199, 98) 100%); 
+  background-clip: text;
+  -webkit-text-fill-color: transparent; /* For Chrome compatibility */
+  /* text-fill-color: transparent; */
+  animation: signal_ani 5s linear infinite;
+}
+@keyframes signal_ani {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 100% 0;
   }
 }
